# aegis

./: .gitignore  README.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: macos-contributor.md
.github/workflows/: ci.yml  codeql-analysis.yml  hardened_build.yml  pages.yml  semgrep-scan.yml
OneDrive/Pictures/Documents/ios-v/aegis/: LICENSE  README.md
OneDrive/Pictures/Documents/ios-v/aegis/.github/workflows/: codeql-analysis.yml  semgrep-scan.yml
OneDrive/Pictures/Documents/ios-v/aegis/backend-go/: README.md  attest.go  debug_rules_test.go  go.mod  main.go  rules_test.go
OneDrive/Pictures/Documents/ios-v/aegis/cache-samples/: README.md  sample-03-threadsafe_cache.cpp  sample-05-persistent_kv.cpp  sample-08-lfu_cache.cpp  sample-14-compact_cache.cpp  sample-15-memstore_snapshot.cpp  sample-16-readthrough_cache.cpp  sample-19-priority_cache.cpp  sample-20-bounded_mmap_cache.cpp
OneDrive/Pictures/Documents/ios-v/aegis/cache-samples/cpp/: sample-01_lru_cache.cpp  sample-02_persistent_kv.cpp
OneDrive/Pictures/Documents/ios-v/aegis/cache-samples/objc/: AsyncCache.m  Cache.h
OneDrive/Pictures/Documents/ios-v/aegis/docs/: README.md  appstore_checklist.md  entitlement_submission.md  ios_build.md  perf.md  security-standards.md
OneDrive/Pictures/Documents/ios-v/aegis/docs/architecture/: README.md
OneDrive/Pictures/Documents/ios-v/aegis/encrypt/: README.md
OneDrive/Pictures/Documents/ios-v/aegis/engine-c/: CMakeLists.txt
OneDrive/Pictures/Documents/ios-v/aegis/engine-c/include/: aegis_ffi.h
OneDrive/Pictures/Documents/ios-v/aegis/engine-c/src/: test_bridge.c
OneDrive/Pictures/Documents/ios-v/aegis/engine-cpp/: CMakeLists.txt  README.md
OneDrive/Pictures/Documents/ios-v/aegis/engine-rust/: Cargo.toml
OneDrive/Pictures/Documents/ios-v/aegis/engine-rust/fuzz/: Cargo.toml
OneDrive/Pictures/Documents/ios-v/aegis/ios-app/: Package.swift  README.md  project.yml
OneDrive/Pictures/Documents/ios-v/aegis/ios-extensions/: README.md
OneDrive/Pictures/Documents/ios-v/aegis/ios-extensions/content-filter/: ContentFilterProvider.swift  README.md
OneDrive/Pictures/Documents/ios-v/aegis/perf/: README.md  cpp_bench.cpp
OneDrive/Pictures/Documents/ios-v/aegis/rules/: README.md
OneDrive/Pictures/Documents/ios-v/aegis/scripts/: build_integration_host.sh  build_release_xcframework.sh  create_xcframework.sh  local_integration_test.sh
OneDrive/Pictures/Documents/ios-v/aegis/server-tools/: BackupManager.swift
OneDrive/Pictures/Documents/ios-v/aegis/website/: features.html  index.html  package-lock.json  styles.css  tsconfig.json
backend-go/: Dockerfile  README.md  attest.go  go.mod  go.sum  main.go
cache-samples/: README.md  sample-01-lru.cpp  sample-02-ttl_cache.cpp  sample-04-freq_cache.cpp  sample-06-weakref_cache.cpp  sample-07-sharded_cache.cpp  sample-09-async_cache.cpp  sample-10-evict_on_size.cpp  sample-11-segmented_cache.cpp  sample-12-timewheel_ttl.cpp  sample-13-prefetch_cache.cpp  sample-17-writeback_cache.cpp  sample-18-approximate_set_cache.cpp
cache-samples/objc/: AsyncCache.h  Cache.m
cache-samples/swift/: sample-03_generic_cache.swift  sample-04_persistent_cache.swift
crypto/: AES-GCM.cpp
crypto/cmake/: CMakeLists.txt
design/: README.md
design/figma-starter/: README.md  tokens.json
docs/: README.md  entitlements.md  mdm_testing.md  security_hardening.md  testing.md
docs/architecture/: README.md
docs/compliance/: README.md
docs/threat-model/: README.md
encrypt/: Cargo.toml  README.md
encrypt/src/: lib.rs
encrypt/src/local-encrypted/: .gitignore  CMakeLists.txt  README.md  api.rs
encrypt/src/local-encrypted/c_bridge/: bridge.h
encrypt/src/local-encrypted/crypto/: crypto.hpp
encrypt/src/local-encrypted/objc/: LocalEncrypt-Bridging-Header.h  LocalEncrypt.h
engine-c/: CMakeLists.txt  README.md
engine-c/include/: aegis_ffi.h
engine-c/src/: bridge.c  wrapper.c
engine-cpp/: README.md
engine-cpp/src/: main.cpp
engine-rust/: README.md
engine-rust/.cargo/: config.toml
engine-rust/ffi/: Cargo.toml  build.rs
engine-rust/ffi/src/: lib.rs
engine-rust/ffi/tests/: ffi_integration.rs
engine-rust/fuzz/src/: fuzz_target.rs
engine-rust/scanner/: Cargo.toml
engine-rust/scanner/src/: lib.rs
fuzz/: README.md
ios-app/: README.md  README.xcodegen.md
ios-app/Entitlements/: Aegis.entitlements
ios-app/Sources/AegisApp/: BatteryAwareScheduler.swift  DocumentScanner.swift  NotificationNames.swift  SecureEnclaveKeyManager.swift
ios-app/Sources/AegisApp/Prototypes/: README.md
ios-extensions/: README.md
perf/: README.md  rust_bench.rs
rules/: README.md  example-rule.json
scripts/: build_integration_host.sh  build_release_xcframework.sh  build_rust_ios.sh
server-tools/: README.md  ShutdownHelper.swift
shared-schemas/: README.md  openapi.yaml
website/: CNAME  features.html  how-it-works.html  package.json  privacy.html
(+27 files in other folders)
