cmake_minimum_required(VERSION 3.15)
project(engine-c)
add_library(engine_c STATIC src/bridge.c)
target_sources(engine_c PRIVATE src/wrapper.c)
add_executable(engine_c_test src/test_bridge.c)
target_link_libraries(engine_c_test PRIVATE engine_c)
target_include_directories(engine_c PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
set_target_properties(engine_c PROPERTIES PUBLIC_HEADER include/aegis_ffi.h)
